--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -63,10 +63,10 @@
 }
 
 .filter-container {
-  padding: 20px;
+  padding: 20px 20px 10px;
   border-bottom: 20px solid #f5f5f5;
   background-color: #fff;
-  .filter-item {
+  .ant-form-item {
     margin-bottom: 10px;
   }
 }
