--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   border: 0 solid;
+  background-color: transparent;
   &::before,
   &::after{
     content: '';
